# UNCALLED

./: .gitignore  CMakeLists.txt  OPTIMIZATION.md  README.md  setup.py
src/: aligned_allocator.h  bwa_index.hpp  mapper.cpp  mapper.hpp  pore_model.hpp  range.cpp  range.hpp
src/bwa/: bntseq.c  bntseq.h  bwt.c  bwt.h  khash.h  kseq.h  ksort.h  kvec.h  utils.c  utils.h
