cmake_minimum_required(VERSION 3.5)
project(UNCALLED)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_C_FLAGS "-march=native -mtune=native -pg")
set(CMAKE_CXX_FLAGS "-march=native -mtune=native -pg")
set(CMAKE_C_FLAGS_RELEASE "-O3")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(ZLIB REQUIRED)
include_directories("./")
include_directories("./pdqsort")
include_directories("./toml11")
include_directories("./fast5/include")
include_directories("./pybind11/include")
include_directories("/home/brdong/hdf5/include")
link_directories("/home/brdong/hdf5/lib")
add_executable(uncalled_map src/uncalled_map.cpp src/map_pool.cpp src/mapper.cpp src/seed_tracker.cpp src/range.cpp src/event_detector.cpp src/normalizer.cpp src/chunk.cpp src/read_buffer.cpp src/fast5_reader.cpp src/bwa/bwt.c src/bwa/utils.c src/bwa/bntseq.c)
target_link_libraries(uncalled_map hdf5 Threads::Threads ZLIB::ZLIB)
